fixed form on mobile and tablet (stretches 100% width)

--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -34,11 +34,7 @@
   width: 570px;
 
   @media (max-width: $tablet-width-only) {
-    width: 590px;
-  }
-
-  @media (max-width: $mobile-width-only) {
-    width: 290px;
+    width: 100%;
   }
 }
 
@@ -47,17 +43,19 @@
   justify-content: space-between;
 }
 
+.form__required label {
+  @media (min-width: $tablet-width) {
+    width: 47.8%;
+  }
+}
+
 .form__required input {
   height: 50px;
   width: 269px;
 
   @media (max-width: $tablet-width-only) {
     height: 52px;
-    width: 280px;
-  }
-
-  @media (max-width: $mobile-width-only) {
-    width: 290px;
+    width: 100%;
   }
 }
 
@@ -123,6 +121,15 @@
   font-size: 14px;
   line-height: 16px;
   opacity: 80%;
+}
+
+.form__check {
+  margin-right: 30px;
+  width: 235px;
+
+  @media (min-width: $tablet-width) and (max-width: $tablet-width-only) {
+    width: 40%;
+  }
 }
 
 .form__check label {
