--- a/source/sass/blocks/question-form.scss
+++ b/source/sass/blocks/question-form.scss
@@ -1,21 +1,21 @@
 .question-form {
-  max-width: 600px;
   min-height: 466px;
 
   @media (min-width: $desktop-width) {
     position: absolute;
     right: 19.5%;
     top: 13.5%;
+    max-width: 600px;
   }
 
   @media (max-width: $tablet-width-only) {
-    margin: 0 auto;
+    margin: 0 92px;
     padding: 80px 0 0 0;
     min-height: 478px;
   }
 
   @media (max-width: $mobile-width-only) {
-    max-width: 290px;
+    margin: 0 15px;
     padding: 30px 0 0 0;
   }
 }
@@ -39,7 +39,7 @@
 .question-form__required {
   flex-direction: row;
   flex-wrap: wrap;
-  align-items: center;
+  align-items: stretch;
   margin-bottom: 37px;
 
   @media (max-width: $mobile-width-only) {
@@ -84,12 +84,11 @@
 
   @media (max-width: $tablet-width-only) {
     height: 160px;
-    width: 590px;
+    width: 100%;
   }
 
   @media (max-width: $mobile-width-only) {
     height: 99px;
-    width: 290px;
   }
 }
 
@@ -105,20 +104,15 @@
   }
 }
 
-.form__check {
-  margin-right: 30px;
-  width: 235px;
-}
-
 .question-form__submit input {
   width: 270px;
 
   @media (max-width: $tablet-width-only) {
-    width: 280px;
+    width: 48%;
   }
 
   @media (max-width: $mobile-width-only) {
-    width: 290px;
+    width: 100%;
     padding: 14px 17px;
   }
 }
